--- a/gateway-chart/templates/deployment.yml
+++ b/gateway-chart/templates/deployment.yml
@@ -5,7 +5,8 @@ metadata:
   labels:
     {{- include "gateway.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  # TODO: Number of replicas is hardcoded!
+  replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ include "gateway.name" . }}
@@ -20,33 +21,43 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: {{ .Values.image.nginx }}
+          # TODO: Get image from values
+          image: nginx:alpine
           ports:
             - name: http
               containerPort: 80
-          # DONE: mount configmap to /etc/nginx/conf.d/default.conf via subPath
+          # DONE: mount ConfigMap to /etc/nginx/conf.d/default.conf via subPath
           volumeMounts:
             - mountPath: /etc/nginx/conf.d/default.conf
-              name: gateway-nginx
+              name: nginx-config
               readOnly: true
               subPath: default.conf
-          # TODO: add readiness/liveness probe to /healthz
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 2
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 80
+            initialDelaySeconds: 3
 
         - name: backend
-          image: {{ .Values.image.echo }}
+          # TODO: Get image from values
+          image: hashicorp/http-echo:1.0.0
           args:
-            - "-listen=:{{ .Values.backend.port }}"
+            - "-listen=:5678"
             - "-text={{ .Values.backend.text }}"
-          # DONE: add ports
+          # TODO: template the port number. Remember to be consistent, where else could it be referenced?
           ports:
             - name: backend
-              containerPort: {{ .Values.backend.port }}
-          # TODO: add tcpSocket probes
+              containerPort: 5678
 
-      # TODO: add volumes: configMap gateway-nginx
       volumes:
         - configMap:
             defaultMode: 420
-            name: gateway-nginx
+            name: {{ include "gateway.name" . }}-nginx
             optional: false
-          name: gateway-nginx
+          name: nginx-config
