--- a/simplest-chart/templates/deployment.yaml
+++ b/simplest-chart/templates/deployment.yaml
@@ -1,17 +1,17 @@
 ﻿apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: simple-nginx
+  name: simplest-nginx
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: simple-nginx
+      app.kubernetes.io/name: simplest-nginx
       app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: simple-nginx
+        app.kubernetes.io/name: simplest-nginx
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
       containers:
