--- a/gateway-chart/templates/deployment.yml
+++ b/gateway-chart/templates/deployment.yml
@@ -25,7 +25,7 @@ spec:
           image: nginx:alpine
           ports:
             - name: http
-              containerPort: 80
+              containerPort: {{ .Values.service.port }}
           # DONE: mount ConfigMap to /etc/nginx/conf.d/default.conf via subPath
           volumeMounts:
             - mountPath: /etc/nginx/conf.d/default.conf
@@ -35,13 +35,13 @@ spec:
           readinessProbe:
             httpGet:
               path: /
-              port: 80
+              port: 80 # TODO: This is hardcoded
             initialDelaySeconds: 2
             periodSeconds: 5
           livenessProbe:
             httpGet:
               path: /healthz
-              port: 80
+              port: 80 # TODO: This is hardcoded
             initialDelaySeconds: 3
 
         - name: backend
